Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28480

Automatic sorting of environment variables in kit breaks parsing

    XMLWordPrintable

Details

    • Linux/X11
    • 8ef85e481 (master)

    Description

      In a kit configuration we can specify environment variables and I currently specify

      PREFIX=/home/mleoni/opt/FEniCS-X/install
      PATH=${PREFIX}/local/bin:${PATH}

       

      This works immediately after I press "Apply", but as soon as I go back into the dialog window the entries get sorted and if I then "Apply" again I get that PREFIX is defined after PATH and so the latter can't see the former, which breaks my build environment.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            mleoni Massimiliano Leoni
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes